[Customize] Colour,design

--- a/index.html
+++ b/index.html
@@ -16,8 +16,8 @@
             <input class="input" type="text">
         </div>
         <div class="row">
-            <button class="button">AC</button>
-            <button class="button">C</button>
+            <button class="button btn-AC">AC</button>
+            <button class="button btn-C">C</button>
             <button class="button">%</button>
             <button class="button">*</button>
         </div>
