--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <h1 class="text-center"> Welcome to MyCalculator!</h1>
     <div class="container mx-auto flex flex-col .item-center">
         <div class="row">
-            <input class="input" type="text">
+            <input class="input" type="text" placeholder="0">
         </div>
         <div class="row">
             <button class="button btn-AC">AC</button>
